Removed demo site index page, updated email/GitHub links

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/zachariahmilby" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:zmilby@caltech.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; 2025 by Zachariah Milby. Website design based on "Story" by <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
